# WinHttpPAL

./: CMakeLists.txt  winhttppaltargets.cmake
cmake/: winhttppalConfig.cmake.in
inc/: winhttppal.h
include/: winhttppal.h
src/: winhttppal.cpp  winhttppal_imp.h
